tests/globals/invalid/fun_redefined_as_var.amu
// TODO
foo :: () -> s32 {
    return 3;
}

foo: s32 = 4;

main :: () -> s32 {
    return foo;
}